feat: add example scripts and dependencies
- Add example scripts for basic, encryption, and teams examples
- Add dotenv and tsx as dev dependencies for running examples

--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "type-check": "tsc --noEmit",
     "lint": "biome lint --reporter summary .",
     "lint:fix": "biome check --apply .",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "example:basic": "tsx examples/basic-example.ts",
+    "example:encryption": "tsx examples/encryption-example.ts",
+    "example:teams": "tsx examples/teams-example.ts"
   },
   "keywords": [
     "envase",
@@ -79,7 +82,9 @@
     "vitest": "^1.0.0",
     "@vitest/ui": "^1.0.0",
     "@vitest/coverage-v8": "^1.0.0",
-    "@biomejs/biome": "^1.7.0"
+    "@biomejs/biome": "^1.7.0",
+    "dotenv": "^16.4.5",
+    "tsx": "^4.7.1"
   },
   "peerDependencies": {
     "typescript": ">=5.0.0"
